creating a new playlist now pulls down user's playlists, created Update page component

--- a/src/styles/CreatePlaylistCard.css
+++ b/src/styles/CreatePlaylistCard.css
@@ -1,5 +1,10 @@
 .CreatePlaylistCard {
   border: 2px dashed purple;
+  height: 50px;
+}
+
+.CreatePlaylistCard button {
+  width: 70px;
 }
 
 .newMode {
