--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.6);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .TrackInfo {
@@ -16,7 +16,7 @@
   height: 95%;
   width: 95%;
   display: grid;
-  grid-template: 40% 20% 15% 25% / 1fr;
+  grid-template: 40% 20% 20% 20% / 1fr;
 }
 
 .TrackArtContainer {
@@ -25,12 +25,15 @@
   justify-content: center;
   align-items: flex-end;
   margin-bottom: 10px;
+  margin-top: 10px;
+
   /* padding-bottom: 5px; */
 }
 
-.SpotifyThumbnail {
+.SpotifyArtwork {
   height: 90%;
   width: auto;
+  box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
 }
 
 .TitleArtistsContainer {
@@ -39,6 +42,7 @@
   flex-direction: column;
   justify-content: center;
   font-weight: 300;
+  margin-top: 10px;
 }
 
 .TitleContainer {
@@ -56,6 +60,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* padding-top: 5%; */
 }
 
 .InputAndErrorContainer {
@@ -80,15 +85,15 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .InputBarContainer input {
-  height: 85%;
+  height: 35px;
   width: 95%;
-  border-radius: 10px;
+  border-radius: 20px;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 15px;
   font-size: 13px;
 }
 
@@ -106,14 +111,14 @@
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 
 .SearchButtonContainer button {
-  height: 85%;
-  width: 85%;
-  border-radius: 100%;
+  height: 35px;
+  width: 35px;
+  border-radius: 200px;
   border: none;
 }
 
@@ -156,10 +161,10 @@
 
 .Buttons button {
   height: 30px;
-  width: 100px;
+  width: 130px;
   border-radius: 20px;
   border: none;
-  margin: 10% 10px;
+  margin: 0px 10px;
 }
 
 .ReplaceSuccessMessage {
