--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -98,6 +98,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0px 5px;
 }
 
 .SpotifyMatchInspected {
@@ -154,6 +155,7 @@
   display: grid;
   grid-template: 50% 50% / 1fr;
   margin: 0 auto;
+  padding: 0px 5px;
 }
 
 .SpotifyTitle {
@@ -202,15 +204,15 @@
 
 .ChangeModalContainer {
   position: absolute;
-  border: 1px solid purple;
+  /* border: 1px solid purple; */
   z-index: 2;
   width: 97vw;
   max-width: 97vw;
   height: 75vh;
   max-height: 75vh;
-  backdrop-filter: blur(8px);
+  /* backdrop-filter: blur(0px); */
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.487);
+  background-color: rgba(255, 255, 255, 0.9);
 }
