--- a/src/styles/ByYearSection.css
+++ b/src/styles/ByYearSection.css
@@ -11,11 +11,13 @@
 .LeftNavContainer {
   border: 5px solid rgb(114, 114, 255);
   height: 100%;
+  width: 5%;
 }
 
 .RightNavContainer {
   border: 5px solid rgb(255, 109, 109);
   height: 100%;
+  width: 5%;
 }
 
 .TranspButton button {
@@ -45,6 +47,63 @@
 .GraphHalf {
   grid-area: 1/1/2/2;
   border: 1px solid lime;
+  display: grid;
+  grid-template: 80% 20% / 1fr;
+}
+
+.GraphArea {
+  grid-area: 1/1/2/2;
+  background-color: rgb(255, 201, 201);
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.MonthBarsContainer {
+  border: 1px solid black;
+  height: 100%;
+  width: 90%;
+}
+
+.MonthBarContainer {
+  height: 100%;
+  width: 8.333%;
+  border: 1px solid orange;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.MonthBar {
+  border: 1px solid black;
+  height: 100%;
+  width: 30%;
+  justify-content: flex-end;
+}
+
+/* .MonthlyTotalBar {
+  background-color: black;
+  width: 30%;
+  border-radius: 150px;
+} */
+
+.GraphFooter {
+  grid-area: 2/1/3/2;
+  background-color: rgb(180, 187, 251);
+  justify-content: center;
+  align-items: center;
+}
+
+.MonthLabelsContainer {
+  border: 1px solid red;
+  width: 90%;
+  font-size: 12px;
+  text-decoration: none;
+  color: black;
+}
+
+.MonthLabel {
+  border: 1px solid rgb(146, 161, 190);
+  width: 8.333%;
 }
 
 .ListHalf {
@@ -109,24 +168,53 @@
 
 .ListContainer {
   width: 90%;
+  max-width: 90%;
   height: 80%;
   border: 1px dashed lime;
+  display: inline;
 }
 
 .PosterCard {
   border: 1px solid red;
-  flex-direction: row;
+  /* flex-direction: row; */
   height: 20px;
+  /* padding-left: 5%; */
+  display: grid;
+  grid-template: 1fr / 10% 90%;
+}
+
+.ColourBoxColumn {
+  border: 1px solid white;
+  grid-area: 1/1/2/2;
+  justify-content: center;
+  align-items: center;
+}
+
+.ColourBox {
+  height: 15px;
+  width: 15px;
+}
+
+.InfoColumn {
+  grid-area: 1/2/2/3;
+  /* border: 1px solid yellow; */
+  height: 100%;
   font-family: monospace, monospace;
   font-size: 14px;
   align-items: center;
-  justify-content: space-between;
-  /* padding-left: 5%; */
+  justify-content: space-around;
+  white-space: nowrap;
+  font-weight: 100;
+}
+
+
+.Gap {
+  flex: 1 0 10px;
 }
 
 
 .PosterTrophy {
-  /* border: 1px solid cyan; */
+  border: 1px solid cyan;
   width: 15px;
   height: 15px;
   /* margin-left: 10px; */
