--- a/src/styles/ByYearSection.css
+++ b/src/styles/ByYearSection.css
@@ -9,13 +9,13 @@
 }
 
 .LeftNavContainer {
-  border: 5px solid rgb(114, 114, 255);
+  /* border: 5px solid rgb(114, 114, 255); */
   height: 100%;
   width: 5%;
 }
 
 .RightNavContainer {
-  border: 5px solid rgb(255, 109, 109);
+  /* border: 5px solid rgb(255, 109, 109); */
   height: 100%;
   width: 5%;
 }
