--- a/src/styles/Spinner.css
+++ b/src/styles/Spinner.css
@@ -1,3 +1,9 @@
+.SpinnerContainer {
+  border: 1px solid red;
+  height: 30px;
+  width: 30px;
+}
+
 .big {
   font-size: 12px;
 }
@@ -15,7 +21,7 @@
 }
 
 .loader {
-  color: purple;
+  color: rgb(39, 146, 39);
   /* font-size: 11px; */
   text-indent: -99999em;
   /* margin: 55px auto; */
@@ -37,7 +43,8 @@
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: rgb(20, 0, 20);
+  /* background: rgb(20, 0, 20); */
+  background: #202124;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -50,7 +57,8 @@
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: rgb(20, 0, 20);
+  /* background: rgb(20, 0, 20); */
+  background: #202124;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 4.9em;
