--- a/src/styles/ByGenreSection.css
+++ b/src/styles/ByGenreSection.css
@@ -1,14 +1,127 @@
 .ByGenreSection {
-  height: 30vh;
+  /* height: 30vh; */
+  height: 523px;
+  /* border: 2px dashed red; */
+  padding: 15px;
+}
+
+.ByGenreSection>div {
+  /* border: 3px solid red; */
+  margin: 5px 0px;
 }
 
 path {
-  margin: 5px;
-  border: 5px solid white;
+  /* margin: 5px; */
+  /* border: 5px solid white; */
+  /* border-radius: 100px; */
 }
 
 text {
   font-weight: 200;
-  fill: black !important;
+  fill: white !important;
   font-size: 8px;
+}
+
+.ByGenreButtonsContainer {
+  /* border: 2px dotted white; */
+  width: 100%;
+  z-index: 2;
+}
+
+.ByGenreButtonsContainer button {
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid white;
+  background: none;
+  padding: 0px 15px;
+  margin: 0px 5px;
+  width: fit-content;
+  display: inline;
+  white-space: nowrap;
+  color: white;
+}
+
+.ByGenreButtonsContainer ::-webkit-scrollbar {
+  display: none;
+}
+
+.YearsButtonsContainer {
+  /* background-color: rgb(220, 214, 171); */
+  padding: 5px 0px;
+}
+
+.YearsButtonsContainer button:first-child {
+  padding: 0px 21px;
+}
+
+.PostersButtonsContainer {
+  /* background-color: rgb(165, 182, 187); */
+  padding: 5px 0px;
+  /* overflow: hidden; */
+  overflow-y: scroll;
+}
+
+.YearsButtonsContainer:first-child {}
+
+.ByGenrePieChartContainer {
+  /* border: 2px solid cyan; */
+  /* background-color: rgb(231, 201, 125); */
+  padding: 2% 0%;
+  justify-content: center;
+  transform: rotate(270deg);
+  z-index: 1;
+}
+
+.ByGenreRankingContainer {
+  /* border: 2px solid gold; */
+  /* background-color: rgb(234, 197, 250); */
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-right: 20px;
+  width: 90%;
+  /* scrollbar-width: 40px; */
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+  width: 40px;
+} */
+
+.ByGenreRankingContainer::-webkit-scrollbar-thumb {
+  background-color: rgb(99, 99, 99);
+  border-radius: 100px;
+  width: 40px;
+}
+
+
+.GenreCard {
+  /* border: 1px solid blue; */
+  height: 20px;
+  width: 100%;
+  padding: 6px 6px;
+  font-size: 19px;
+  font-weight: 300;
+  align-items: center;
+}
+
+.GenreColourBox {
+  height: 20px;
+  width: 20px;
+  /* border: 1px solid white; */
+  margin-right: 4%;
+  border-radius: 150px;
+}
+
+.Ranking {
+  margin-right: 2%;
+}
+
+.GenreCount {
+  margin-left: 2%;
+  font-size: 12px;
+  margin-top: auto;
 }
