--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -106,6 +106,7 @@
 .PosterPlaylistCard {
   height: 70px;
   border: 1px solid rgb(85, 85, 85);
+  /* border: 1px solid orange; */
   border-top: none;
   padding: 10px;
   align-items: center;
@@ -118,6 +119,7 @@
   align-items: flex-start;
   color: white;
   text-align: left;
+  max-width: 60%;
 }
 
 .PosterPlaylistCard img {
