--- a/src/styles/NoNew.css
+++ b/src/styles/NoNew.css
@@ -1,23 +1,47 @@
 .NoNew {
-  border: 2px solid darkgreen;
-  height: 90vh;
-  margin: 0;
+  /* border: 2px solid darkgreen; */
+  /* height: 90vh; */
+  margin: auto 0;
+  font-family: "Raleway-Thin";
+}
+
+.NoNew h1 {
+  color: white;
+  font-size: 38px;
+}
+
+.NoNew h3 {
+  color: #76c77e;
+  font-family: "Raleway-ExtraLight";
+  font-size: 22px;
+
 }
 
 .GreenCircleContainer {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin: 10% 0%;
+}
+
+@keyframes noNewFadeIn {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
 }
 
 .GreenCircle {
   height: 40vw;
   width: 40vw;
   border-radius: 100%;
-  background-color: limegreen;
+  background-color: #66B06E;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: fadeIn 1s;
+  animation: noNewFadeIn 0.5s linear;
 }
