--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
 .App {
   text-align: center;
-  background-color: #202124;
+  background-color: #292B3E;
   color: white;
-  height: 100vh;
-  max-height: 100vh;
+  height: 92vh;
+  max-height: 92vh;
+  /* border: 3px solid blue; */
+  display: flex;
+  justify-content: center;
+  border: 2px solid orange;
+  box-sizing: border-box;
 }
+
+.AppView {
+  background-color: #292B3E;
+  border: 2px solid red;
+  height: 100%;
+  max-height: 100%;
+  width: 382px;
+  max-width: 362px;
+  box-sizing: border-box;
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -40,4 +56,66 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Raleway-Bold {
+  font-family: "Raleway-Bold";
+}
+
+.Raleway-ExtraLight {
+  font-family: "Raleway-ExtraLight";
+}
+
+.Raleway-Regular {
+  font-family: "Raleway-Regular";
+}
+
+.Raleway-SemiBold {
+  font-family: "Raleway-SemiBold";
+}
+
+.Raleway-Thin {
+  font-family: "Raleway-Thin";
+}
+
+.SpotifyLoginContainer {
+  height: 100vh;
+  /* border: 2px solid red; */
+  justify-content: center;
+  padding: 5%;
+}
+
+.SpotifyLoginScreen {
+  /* border: 1px solid red; */
+  height: 155px;
+  background-color: #09090D;
+  border-radius: 15px;
+  padding: 2% 5% 7% 5%;
+  /* justify-content: center; */
+  /* align-items: center; */
+
+}
+
+.SpotifyLoginScreen h1 {
+  font-size: 41px;
+  /* border: 1px solid red; */
+  width: 96%;
+  text-align: left;
+  /* padding-left: 2%; */
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.SpotifyLoginScreen a {
+  background-color: #66B06E;
+  min-height: 50px;
+  color: white;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
