--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -8,7 +8,119 @@
   background-color: green;
 }
 
-.Auth h1 {}
+.Auth {
+  /* border: 6px solid lime; */
+  height: 94%;
+  max-height: 94%;
+  padding: 5%;
+  justify-content: space-between;
+}
+
+.AuthHeaders {
+  /* border: 2px dashed cyan; */
+  margin-bottom: 20%;
+}
+
+.Auth h1 {
+  /* border: 1px solid red; */
+  width: 100%;
+  text-align: left;
+  font-size: 41px;
+  /* font-size: 11vw; */
+  /* font-size: 3rem; */
+  /* margin-bottom: 16px; */
+  margin-bottom: 5%;
+}
+
+.Auth h2 {
+  text-align: left;
+  /* border: 1px solid red; */
+  font-size: 20px;
+}
+
+.Auth form {
+  /* border: 3px solid yellow; */
+  height: 50%;
+  background-color: #09090D;
+  border-radius: 15px;
+  /* padding: 15px; */
+  padding: 4.2%;
+  justify-content: center;
+}
+
+.Auth input {
+  height: 50px;
+  /* height: 20%; */
+  width: 94%;
+  border: none;
+  background-color: #1B1C2A;
+  border-radius: 15px;
+  color: white;
+  font-size: 16px;
+  padding: 0px 10px;
+}
+
+.Auth input:focus {}
+
+
+.Auth input {}
+
+.InputContainer {
+  /* border: 1px solid yellow; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 16px;
+}
+
+.InputContainer span {
+  width: 100%;
+  margin-bottom: 8px;
+  text-align: left;
+  /* border: 1px solid green; */
+  font-family: "Raleway-Regular";
+  font-size: 16px;
+}
+
+.Auth button {
+  height: 50px;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  background-color: #7316C6;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  /* margin-top: 24px; */
+  margin-top: 5%;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.Auth a {
+  /* border: 1px solid red; */
+  font-family: "Raleway-Regular";
+  font-size: 14px;
+}
+
+.LoginErrorContainer {
+  /* border: 1px solid red; */
+  height: 6%;
+  padding-top: 1%;
+}
+
+.LoginErrorMsg {
+  color: red;
+  /* border: 1px solid yellow; */
+  padding-top: 2%;
+  /* height: 10%; */
+}
+
+.LoginErrorMsg svg {
+  /* border: 1px solid green; */
+  margin-right: 2%;
+}
+
 
 .Auth {
   /* height: 100vh;
@@ -24,19 +136,6 @@
   /* width: 50%; */
 }
 
-.Auth input {
-  /* width: 100%;
-  height: 50px;
-  border: 1px solid purple;
-  color: black;
-  border-radius: 10px;
-  background-color: black;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  transition: .5s;
-  margin-bottom: 2%;
-  padding: 0px 3%; */
-}
 
 .Auth input:focus {
   /* background-color: purple;
@@ -46,14 +145,7 @@
   transition: .5s; */
 }
 
-.Auth button {
-  /* height: 50px;
-  width: 20%;
-  border: 1px solid purple;
-  border-radius: 10px;
-  background-color: purple;
-  color: black; */
-}
+
 
 .Auth button:hover {
   /* background-color: black;
@@ -73,5 +165,9 @@
   .Auth button {
     /* width: 50%; */
   }
+}
 
+.AuthSpinnerContainer {
+  /* border: 1px solid red; */
+  width: 100%;
 }
