--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -1,143 +1,145 @@
 .ChangeModal {
-  height: 400px;
-  width: 90%;
-  /* width: 90%; */
-  background-color: lightgray;
-  left: 4%;
-  border-radius: 5px;
+  /* height: 500px; */
+  width: 100%;
+  border-radius: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  /* border: 1px solid yellow; */
+  padding: 5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+.ChangeSearchLoading-false {
+  background-color: #292B3E;
+}
+
+.ChangeSearchLoading-true {
+  background: none;
+  border: none;
+}
+
+.ChangeReplaceSuccess-true {
+  background: none;
+  border: none;
+}
+
+
 .TrackInfo {
-  /* border: 1px solid purple; */
-  height: 95%;
-  width: 95%;
-  display: grid;
-  grid-template: 40% 20% 20% 20% / 1fr;
+  /* border: 3px solid white; */
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.ChangeModalInfoContainer {
+  /* height: 50%; */
+  width: 100%;
 }
 
 .TrackArtContainer {
-  /* border: 1px solid red; */
+  /* border: 1px solid orange; */
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   margin-top: 10px;
-
-  /* padding-bottom: 5px; */
+  height: 135px;
 }
 
 .SpotifyArtwork {
-  height: 90%;
+  height: 100%;
   width: auto;
   box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
 }
 
 .TitleArtistsContainer {
-  /* border: 3px solid orange; */
+  /* border: 1px solid white; */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-weight: 300;
-  margin-top: 10px;
+  flex: 1;
+  /* justify-content: space-evenly; */
+
+  /* font-weight: 300; */
+  /* margin-top: 10px; */
+  margin: 6% 0px;
 }
 
 .TitleContainer {
-  /* border: 1px solid green; */
-  font-size: 18px;
+  font-family: "Raleway-Regular";
+  font-size: 22px;
+  margin-bottom: 8px;
 }
 
 .ArtistsContainer {
-  /* border: 1px solid hotpink; */
-  font-size: 14px;
+  font-family: "Raleway-Regular";
+  font-size: 16px;
 }
 
-.InputContainer {
-  /* border: 1px solid blue; */
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  /* padding-top: 5%; */
-}
-
-.InputAndErrorContainer {
+.ChangeModalControlsContainer {
   /* border: 1px solid red; */
   width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template: 75% 25% / 1fr;
+  /* flex: 1; */
 }
 
-.InputBarAndButtonContainer {
-  grid-area: 1/1/2/2;
-  /* border: 1px solid orange; */
-  display: grid;
-  grid-template: 1fr / 85% 15%;
+.ChangeModalControlsContainer input {
+  height: 43px;
+  /* height: 20%; */
+  width: 94%;
+  border: none;
+  background-color: #1B1C2A;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+  padding: 0px 10px;
 }
 
-.InputBarContainer {
-  grid-area: 1/1/2/2;
-  /* border: 1px solid yellow; */
+.ChangeModalControlsContainer button {
+  height: 40px;
   width: 100%;
-  height: 100%;
+  border-radius: 5px;
+  border: none;
+  background-color: #7316C6;
+  font-family: "Raleway-Bold";
+  font-size: 15px;
+  font-weight: 800;
+  margin-top: 5%;
+  color: white;
+}
+
+.ChangeModalControlsContainer button:nth-child(4) {
+  background-color: #66B06E;
+}
+
+.ErrorAndSearchContainer {
+  /* border: 1px solid cyan; */
+  height: 40px;
+  margin-top: 5%;
+  width: 100%;
+}
+
+.ErrorAndSearchContainer button {
+  margin-top: 0%;
+  width: 80px;
+  font-size: 22px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-}
-
-.InputBarContainer input {
-  height: 35px;
-  width: 95%;
-  border-radius: 20px;
-  box-sizing: border-box;
-  padding: 15px;
-  font-size: 13px;
-}
-
-.InputBarError-false {
-  border: none;
-}
-
-.InputBarError-true {
-  border: 2px solid rgb(209, 0, 0);
-}
-
-.SearchButtonContainer {
-  grid-area: 1/2/2/3;
-  /* border: 1px solid green; */
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.SearchButtonContainer button {
-  height: 35px;
-  width: 35px;
-  border-radius: 200px;
-  border: none;
-}
-
-
-.InputErrorMessageContainer {
-  grid-area: 2/1/3/2;
-  /* border: 1px solid cyan; */
-  display: flex;
-  justify-content: flex-start;
   align-items: center;
-
+  margin-left: 3%;
 }
 
-.InputErrorMessageContainer span {
-  color: darkred;
-  /* border: 1px solid darkred; */
-  font-size: 10px;
-  /* line-height: 0px; */
-  padding-left: 3%;
+.ErrorContainer {
+  /* border: 1px solid red; */
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-size: 14px;
+  /* color: red; */
+  justify-content: flex-start;
 }
 
 .InputErrorMsg-false {
@@ -148,32 +150,26 @@
   visibility: visible;
 }
 
-#Search {
-  color: gray;
+.ChangeModal button:disabled {
+  opacity: 0.25;
 }
 
-.Buttons {
-  /* border: 1px solid hotpink; */
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.Buttons button {
-  height: 30px;
-  width: 130px;
-  border-radius: 20px;
-  border: none;
-  margin: 0px 10px;
-}
 
 .ReplaceSuccessMessage {
-  /* border: 1px dashed black; */
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.ReplaceSuccessMessage span:nth-child(2) {
+  margin-top: 5%;
+  font-family: "Raleway-Bold";
+  font-size: 28px;
+  background-color: #292B3E;
+  border-radius: 15px;
+  padding: 5%;
 }
 
 .GreenCircle {
@@ -201,3 +197,153 @@
     opacity: 1;
   }
 }
+
+/*
+
+.TrackInfo {
+  display: grid;
+  grid-template: 40% 20% 20% 20% / 1fr;
+}
+
+.TrackArtContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.SpotifyArtwork {
+  height: 90%;
+  width: auto;
+  box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
+}
+
+.TitleArtistsContainer {
+  border: 3px solid orange;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: 300;
+  margin-top: 10px;
+}
+
+.TitleContainer {
+  border: 1px solid green;
+  font-size: 18px;
+}
+
+.ArtistsContainer {
+  border: 1px solid hotpink;
+  font-size: 14px;
+}
+
+.InputContainer {
+  border: 1px solid blue;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.InputAndErrorContainer {
+  border: 1px solid red;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template: 75% 25% / 1fr;
+}
+
+.InputBarAndButtonContainer {
+  grid-area: 1/1/2/2;
+  border: 1px solid orange;
+  display: grid;
+  grid-template: 1fr / 85% 15%;
+}
+
+.InputBarContainer {
+  grid-area: 1/1/2/2;
+  border: 1px solid yellow;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.InputBarContainer input {
+  height: 35px;
+  width: 95%;
+  border-radius: 20px;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 13px;
+}
+
+.InputBarError-false {
+  border: none;
+}
+
+.InputBarError-true {
+  border: 2px solid rgb(209, 0, 0);
+}
+
+.SearchButtonContainer {
+  grid-area: 1/2/2/3;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.SearchButtonContainer button {
+  height: 35px;
+  width: 35px;
+  border-radius: 200px;
+  border: none;
+}
+
+
+.InputErrorMessageContainer {
+  grid-area: 2/1/3/2;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+}
+
+.InputErrorMessageContainer span {
+  color: darkred;
+  font-size: 10px;
+  padding-left: 3%;
+}
+
+.InputErrorMsg-false {
+  visibility: hidden;
+}
+
+.InputErrorMsg-true {
+  visibility: visible;
+}
+
+#Search {
+  color: gray;
+}
+
+.Buttons {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.Buttons button {
+  height: 30px;
+  width: 130px;
+  border-radius: 20px;
+  border: none;
+  margin: 0px 10px;
+}
+
+
+
+*/
