--- a/src/styles/ContributorsSection.css
+++ b/src/styles/ContributorsSection.css
@@ -4,129 +4,422 @@
 }
 
 .HeaderAndEditButton {
-  border: 1px solid red;
-  justify-content: center;
+  /* border: 4px dotted red; */
+  /* justify-content: center; */
   align-items: center;
-  height: 35px;
+  /* height: 35px; */
   position: relative;
+  justify-content: space-between;
+  align-items: flex-end;
+  /* padding-bottom: 4%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; */
 }
 
-.HeaderAndEditButton h4 {}
+.HeaderAndEditButton h4 {
+  color: white;
+  font-family: "Raleway-SemiBold";
+  font-size: 26px;
+  margin: 0;
+  padding-bottom: 3%;
+}
 
 
 .HeaderAndEditButton button {
-  position: absolute;
-  right: 0;
-  margin-right: 7%;
+  height: 49px;
+  width: 57px;
+  border-radius: 15px;
   background-color: none;
   border: none;
-  width: 35px;
-  height: 35px;
-  font-size: 20px;
+  font-size: 28px;
   color: white;
-  background-color: #202124;
+  background-color: #7316C6;
+  margin-bottom: 2%;
+}
+
+.ContribEdit-true {
+  visibility: hidden;
 }
 
 .ContributorsList {
-  /* border: 1px solid black; */
-  margin: 10px 0px;
-}
-
-.ContributorCard {
-  flex-direction: row;
-  height: 20px;
   /* border: 1px solid red; */
-  /* padding-left: 5%; */
+  border-radius: 15px;
+  background-color: #09090D;
+  padding: 6% 4%;
+  /* margin: 10px 0px; */
+  font-family: "Raleway-Regular";
+  font-size: 22px;
 }
 
-.ContributorCard div {
-  margin: 0px 10px;
-  /* border: 1px dashed blue; */
+.ContributorsColumnsContainers {
+  /* border: 2px solid white; */
+  width: 100%;
 }
 
-.ContributorGroupIcon {
-  /* border: 1px solid red; */
-  width: 20px;
-  margin-right: 0px !important;
-  font-size: 10px;
-  justify-content: center;
-  align-items: center;
+.ContributorsNameColumn {
+  /* border: 3px solid blue; */
 }
 
 .ContributorName {
+  height: 32px;
+  max-height: 32px;
   /* margin: 0px 10px; */
+  /* border: 1px solid cyan; */
+  justify-content: flex-start;
+  align-items: center;
+  margin: 3px 0px;
 }
 
-.ContributorTotal {}
+.ContributorName span {
+  max-width: 170px;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+
+.ContributorsHyphenAndCountColumn {
+  /* border: 1px solid orange; */
+  flex: 1;
+}
+
+.ContributorHyphenAndCountContainer {
+  height: 32px;
+  max-height: 32px;
+  /* border: 3px solid yellow; */
+  align-items: center;
+  min-width: 0;
+  margin: 3px 0px;
+}
+
+.ContributorHyphenAndCountContainer svg {
+  font-size: 20px;
+  color: #CA9F45;
+  margin: 3px 0px 0px 12px;
+}
+
+.ContributorHyphen {
+  /* border: 1px solid green; */
+  height: 100%;
+  align-items: center;
+  flex: 1;
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
+.ContributorHyphen div {
+  height: 1px;
+  width: 100%;
+  background-color: #797979;
+}
+
+.ContributorTotalContainer {
+  /* border: 1px solid white; */
+  height: 100%;
+  align-items: center;
+  margin: 0;
+  /* width: 24px; */
+  justify-content: center;
+  font-family: "Raleway-SemiBold";
+  position: relative;
+}
+
+.ContributorTotalOverlay {
+  position: absolute;
+  top: 3px;
+  left: 2px;
+  color: hotpink;
+  font-family: "Raleway-SemiBold";
+  z-index: 1;
+  font-size: 26px;
+}
+
+.ContributorTotal {
+  color: white;
+  font-family: "Raleway-SemiBold";
+  z-index: 2;
+  font-size: 26px;
+}
+
+#ContTotal-0 {
+  font-size: 36px;
+  color: rgb(247, 227, 176);
+}
+
+#ContTotalOverlay-0 {
+  font-size: 36px;
+  color: rgb(186, 135, 6);
+  position: absolute;
+  top: -2px;
+  left: 1px;
+}
+
+
 
 .NotEditing {
   transition: height 1s;
 }
 
 .Editing {
-  border: 2px solid cyan;
+  /* border: 2px solid cyan; */
   transition: height 1s;
 }
 
-.CheckBoxOptionCard {
+.Editing button {
+  height: 40px;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  background-color: #7316C6;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  /* margin-top: 24px; */
   color: white;
-  border: 1px solid white;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  /* height: 30px; */
 }
 
-.CheckBoxOptionCard #checkbox {
-  height: 20px;
-  width: 20px;
+
+.Editing button:disabled {
+  opacity: 0.25;
 }
 
-.EditRadios {
-  border: 2px dashed red;
-}
-
-.RenameOptionCard {
-  color: white;
-  border: 1px solid white;
+.EditOptions>div {
+  /* border: 1px solid lime; */
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  /* height: 35px; */
-  align-items: flex-start;
+}
+
+.EditOptions>div button {
+  /* border: 1px solid red; */
+  margin-top: 5%;
+  width: 47%;
+}
+
+.EditRename {
+  /* border: 1px solid red; */
+  width: 100%;
+  margin-top: 5%;
 }
 
 
-.RenameContainer {
-  border: 1px solid blue;
+
+.RenameInputContainer {
+  /* border: 1px solid yellow; */
+  justify-content: space-between;
+  /* margin-top: 12px; */
+  margin-top: 4%;
+  padding: 1%;
 }
 
 .RenameInputContainer {
-  border: 1px solid green;
+  flex: 1;
+}
+
+/* .RenameInputContainer span {
+  font-size: 8px;
+} */
+
+#RenameHeader {
+  font-size: 18px;
+  /* width: 300px; */
+  text-align: left;
+}
+
+.RenameHeaderContainer {
   align-items: center;
 }
 
-.RenameInputContainer span {
-  font-size: 8px;
+#RenameHeaderLine {
+  background-color: #797979;
+  width: 100%;
+  margin-left: 5%;
+  height: 1px;
 }
 
+
+#RenameError {
+  color: red;
+  font-size: 18px;
+  width: 300px;
+  /* border: 1px solid lime; */
+  text-align: left;
+}
+
+#RenameError svg {
+  font-size: 14px;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+
 .RenameInputContainer input {
-  height: 18px;
+  border: 1px solid white;
+  height: 39px;
+  flex: 1;
+  margin-right: 5%;
+  /* border: none; */
+  background-color: #1B1C2A;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+  padding: 0px 10px;
+}
+
+.RenameInputError-false:focus {
+  outline: 2px solid #98FFAD;
+}
+
+
+.RenameInputError-true:focus {
+  height: 40px;
   border: none;
+  outline: 2px solid red;
 }
 
 .RenameInputActiveControls {}
 
-.EditSeeGroups {
-  border: 2px solid orange;
+#RenameSaveButton {
+  width: 20%;
+  font-size: 24px;
 }
 
-.GroupContainer {}
 
-.GroupName {}
+
+
+/* -------------------- */
+
+
+
+.EditCheckboxes {
+  border: 1px solid red;
+}
+
+.EditCheckboxes button {
+  margin-top: 5%;
+}
+
+
+
+
+.CheckBoxOptionCard {
+  color: white;
+  /* border: 1px solid orange; */
+  align-items: center;
+  margin-top: 5%;
+  justify-content: flex-start;
+  /* height: 30px; */
+}
+
+.CheckBoxOptionCard #checkbox {
+  min-height: 35px;
+  min-width: 35px;
+  margin-right: 15px;
+  border: none;
+}
+
+.EditRadios {
+  /* border: 2px dashed red; */
+}
+
+.EditRadios #radio {
+  border: 3px solid white;
+  margin-right: 15px;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 1%;
+}
+
+
+.EditRadios button {
+  margin-top: 5%;
+}
+
+
+
+
+.EditSeeGroups {
+  /* border: 2px solid green; */
+  max-height: 150px;
+  overflow-y: scroll;
+  margin-top: 5%;
+}
+
+.GroupContainer {
+  /* border: 2px solid red; */
+  padding-right: 10px;
+  margin-bottom: 5%;
+}
+
+.GroupName {
+  /* border: 2px solid blue; */
+  align-items: center;
+}
+
+.GroupName svg {
+  font-size: 20px;
+  padding: 0px 10px;
+}
 
 .GroupName span {
-  text-decoration: underline;
+  height: 28px;
+  line-height: 28px;
+  /* padding: 2px; */
+  background-color: #4A4964;
+  font-family: "Raleway-SemiBold";
+  color: #98FFAD;
+  font-size: 18px;
+  /* display: flex;
+  align-items: center;
+  flex: 1; */
+  border-radius: 5px;
+  padding: 0px 10px;
+  width: 85%;
+  max-width: 85%;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left;
 }
 
-.GroupGroupees {}
+.GroupGroupees {
+  /* border: 2px solid orange; */
+}
 
 .GroupGroupees span {
+  display: flex;
+  justify-content: flex-start;
   font-size: 12px;
+  padding-left: 57px;
+  margin: 2px 0px;
+  font-family: "Raleway-Regular";
+  font-size: 18px;
+  color: white;
+}
+
+.EditSeeGroups::-webkit-scrollbar {
+  width: 10px;
+  padding: 0;
+  margin: 0;
+  padding: 5px;
+  /* border: 1px solid red; */
+}
+
+.EditSeeGroups::-webkit-scrollbar-track {}
+
+.EditSeeGroups::-webkit-scrollbar-thumb {
+  background-color: white;
+  outline: 0px;
+  border-radius: 10px;
 }
