--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,166 @@
-.HomeContainer {
+.HomeScreenLoggedInSpotify {
   border: 2px solid blue;
+  height: 95%;
+  /* width: 100%; */
+  max-height: 95%;
+  padding: 5%;
+  justify-content: center;
+  align-items: center;
 }
 
-.CardButtons {
+.CreatePlaylistModalBackdrop {
+  /* border: 1px solid red; */
   height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.67;
+}
+
+.HomeContainer {
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 100%;
+}
+
+.UserContainer {
+  border: 1px solid #797979;
+  border-radius: 15px;
+  padding: 15px;
+  font-size: 45px;
+  margin-bottom: 5%;
+}
+
+.UsernameAndSignOut {
+  /* border: 1px solid blue; */
+  width: 100%;
+  margin-left: 16px;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* margin-bottom: 2px; */
+}
+
+.UsernameAndSignOut span {
+  /* font-family: "Raleway-Thin"; */
+  font-size: 18px;
+  font-family: "Raleway-Regular";
+}
+
+.UsernameAndSignOut button {
+  font-family: "Raleway-SemiBold";
+  font-size: 16px;
+  padding: 0;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  background: none;
+  border: none;
+  color: white;
+  text-decoration: underline;
+  padding-bottom: 1%;
+  width: 100%;
+}
+
+.UsernameAndSignOut svg {
+  margin-left: 6px;
+}
+
+.HomePlaylistCardsContainer {
+  /* border: 5px solid yellow; */
+  flex: 1;
+  overflow: hidden;
+  overflow-y: scroll;
+  /* background-color: #191a26; */
+  /* border-radius: 18px; */
+  width: 100%;
+  /* height: 100%; */
+  align-items: center;
+}
+
+.HomePlaylistCardsContainer::-webkit-scrollbar {
+  display: none;
+}
+
+
+.HomeCreatePlaylistButtonContainer {
+  height: 50px;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 5%;
+  /* border: 2px solid red; */
+}
+
+.HomeCreatePlaylistButtonContainer button {
+  height: 100%;
+  width: 100%;
+  background-color: #7316C6;
+  border-radius: 10px;
+  border: none;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+}
+
+.HomeCreatePlaylistModalContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  /* border: 3px solid red; */
+}
+
+.HomeCreatePlaylistModal {
+  position: absolute;
+  width: 80%;
+  height: 20%;
+  padding: 5%;
+  background-color: #292B3E;
+  border-radius: 15px;
+  z-index: 999;
+  justify-content: center;
+  align-items: center;
+}
+
+.HomeCreatePlaylistModalContents {
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.HomeCreatePlaylistModalContents input {
+  height: 50px;
+  /* height: 20%; */
+  width: 94%;
+  border: none;
+  background-color: #1B1C2A;
+  border-radius: 10px;
+  color: white;
+  font-size: 16px;
+  padding: 0px 10px;
+}
+
+
+.HomeCreatePlaylistModalContents button {
+  height: 50px;
+  width: 100%;
+  background-color: #7316C6;
+  border-radius: 5px;
+  border: none;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+}
+
+.HomeCreatePlaylistModalContents button:disabled {
+  opacity: 0.25;
 }
