--- a/src/styles/OverviewSection.css
+++ b/src/styles/OverviewSection.css
@@ -1,16 +1,27 @@
 .OverviewSection {
   /* border: 3px dashed white; */
-  height: 30vh;
-  align-items: center;
-  justify-content: center;
+  height: 300px;
+  align-items: flex-start;
+}
+
+.SectionHeader {
+  color: white;
+  font-family: "Raleway-SemiBold";
+  font-size: 26px;
+  margin: 0;
+  padding-bottom: 3%;
 }
 
 .OverviewGraphBox {
-  background-color: rgb(172, 172, 172);
-  height: 90%;
-  max-height: 90%;
-  width: 80%;
-  max-width: 80%;
+  /* border: 1px solid red; */
+  border-radius: 15px;
+  background-color: #09090D;
+  height: 100%;
+  /* max-height: 100%; */
+  width: 100%;
+  /* max-width: 100%; */
+  padding: 5% 2%;
+  box-sizing: border-box;
   display: grid;
   grid-template: 85% 15% / 1fr;
 }
@@ -22,6 +33,7 @@
 
 .GraphFooterContainer {
   grid-area: 2/1/3/2;
+  /* padding-top: 20px; */
   /* border: 2px solid blue; */
 }
 
@@ -36,7 +48,9 @@
 .BarAndNumberContainer {
   /* border: 2px dashed orange; */
   height: 95%;
-  width: 20%;
+  width: 50%;
+  max-width: 80px;
+  /* flex: 1; */
   justify-content: flex-end;
   align-items: center;
 }
@@ -50,17 +64,20 @@
 
 .NumberContainer {
   /* border: 1px solid green; */
+  margin-bottom: 5px;
   height: 15%;
-  /* justify-content: center; */
-  font-size: 125%;
-  color: gray
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: white;
+  font-family: 'Arial';
 }
 
 .Bar {
   /* height: 100%; */
   width: 45%;
-  border-radius: 150px;
-  background-color: black;
+  border-radius: 150px 150px 0px 0px;
+  background-color: #98FFAD;
 }
 
 .FooterYearContainer {
@@ -70,5 +87,7 @@
   justify-content: center;
   align-items: center;
   font-size: 150%;
-  color: black;
+  color: white;
+  font-family: "Raleway-Regular";
+  font-size: 28px;
 }
