--- a/src/styles/Update.css
+++ b/src/styles/Update.css
@@ -1,37 +1,43 @@
 .Update {
-  border: 4px dashed gold;
-  height: 98vh;
+  border: 2px dashed yellow;
+  height: 97%;
+  max-height: 97%;
+  /* flex: 1; */
+  padding: 5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-textarea {
-  border: 1px solid red;
-  width: 90%;
-  height: 50vh;
-  background-color: #202124;
+.UpdateGoBackContainer {
+  /* border: 1px solid lime; */
+  justify-content: flex-start;
+  align-items: center;
+  height: 5%;
 }
 
-textarea::-webkit-scrollbar {
-  width: 1em;
-  padding: 0;
-  margin: 0;
-}
-
-textarea::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-textarea::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-}
-
-#submitButton {
-  border: 1px solid green;
-  width: 120px;
-  height: 30px;
-  border-radius: 10px;
-}
-
-#submitButton:disabled {
+.UpdateGoBackContainer button {
+  height: 100%;
+  width: 40%;
+  background: none;
   border: none;
+  color: white;
+  font-size: 32px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.UpdateGoBackContainer span {
+  font-family: "Raleway-Regular";
+  font-size: 22px;
+  margin-left: 12px;
+}
+
+.InfoArea {
+  /* border: 1px solid hotpink; */
+  height: 95%;
+  max-height: 95%;
+  /* flex: 1; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
